[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-inspector"
version = "0.1.0"
description = "AI-first CLI for inspecting Bilibili videos via agent-browser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bili-inspector = "bili_inspector.cli:entrypoint"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
